server/k8s/ingress/combined-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: heroes-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: $API_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
  - host: $API_HOSTNAME
    http:
      paths:
      - path: /api
        backend:
          serviceName: api-service
          servicePort: 80
