server/k8s/ingress/gke-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: dart-heroes
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "static-ip-name"
spec:
  tls:
    - hosts:
      - $API_HOSTNAME
      secretName: dart-heroes-tls
  rules:
  - host: $API_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: api-service
          servicePort: 80
