server/k8s/ingress/nginx-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: dart-heroes
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: $API_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: api-service
          servicePort: 80
