server/k8s/ingress/nginx-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: dart-heroes
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - $API_HOSTNAME
    secretName: dart-heroes-tls
  rules:
  - host: $API_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: api-service
          servicePort: 80
